@@ -1,3 +1,9 @@
+2023-11-24  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* tests/fn-generate.perl: Add test for file names with
+	over-BMP (4byte UTF-8).
+	https://tug.org/pipermail/tex-live/2023-November/049685.html
+
 2023-11-19  Karl Berry  <karl@freefriends.org>
 
 	* tex.ch,
